[package]
name = "leeward"
version = "0.2.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2018"

[features]
workaround_rls_vscode_bug_586 = [] 

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "1.0"
las = "0.7"
libc = "0.2"
nalgebra = { version = "0.24", features = ["serde-serialize"] }
sbet = { git = "https://github.com/gadomski/sbet-rs" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
approx = "0.4"
clap = "2.33"
csv = "1.1"

[build-dependencies]
cbindgen = "0.15"