[package]
name = "leeward"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2018"

[features]
workaround_rls_vscode_bug_586 = []

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "1.0"
clap = { version = "2.33", features = ["yaml"] }
csv = "1.1"
las = "0.8"
libc = "0.2"
nalgebra = { version = "0.24", features = ["serde-serialize"] }
sbet = { git = "https://github.com/gadomski/sbet-rs" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
approx = "0.4"

[build-dependencies]
cbindgen = "0.27"
