[package]
name = "leeward"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib"]

[features]
cli = ["dep:clap"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"], optional = true }
csv = "1.1"
las = "0.8"
libc = "0.2"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
sbet = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
approx = "0.5"

[build-dependencies]
cbindgen = "0.27"

[[bin]]
name = "leeward"
required-features = ["cli"]
test = false
doc = false
